# rag1

./: .gitignore  README.md  download-on-startup.service.j2  dynamic_inventory.py  playbook.yml  pyproject.toml  terragrunt.hcl  upload-on-shutdown.service.j2
.github/workflows/: docker-build.yml
backend/src/rag1/: read.py  test.py  test2.py
infrastructure/ansible/: dynamic_inventory.py
infrastructure/terra/: terragrunt.hcl
infrastructure/terra/terraform/: main.tf  variables.tf
rag1backend/: Dockerfile  pyproject.toml
rag1backend/src/rag1backend/entrypoint/: main.py
rag1backend/src/rag1backend/model/: embed_request.py  search_request.py
rag1backend/src/rag1backend/repository/: milvus_repository.py  repository.py  vector_repository.py
rag1backend/src/rag1backend/service/: rest_service.py
rag1frontend/: Dockerfile  pyproject.toml
rag1frontend/src/rag1frontend/entrypoint/: main.py
rag1frontend/src/rag1frontend/handlers/: call_backend.py
rag1frontend/src/rag1frontend/utils/: slack.py
rag1infrastructure/ansible/: dynamic_inventory.py  playbook.yml
rag1infrastructure/terra/terraform/: main.tf  outputs.tf  variables.tf
storage/: vector-db-stop.service.j2
terraform/: main.tf  outputs.tf  variables.tf
