[tool.poetry]
name = "rag1backend"
version = "0.1.0"
description = ""
authors = ["DmytroKrynytsyn <dmitry.krinitsyn@gmail.com>"]
readme = "README.md"
packages = [{include = "rag1backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
