[tool.poetry]
name = "rag1backend"
version = "0.1.0"
description = ""
authors = ["DmytroKrynytsyn <dmitry.krinitsyn@gmail.com>"]
readme = "README.md"
packages = [{include = "rag1backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.112.0"
pymilvus = "^2.4.5"
openai = "^1.40.6"

[tool.poetry.scripts]
slack_bot = "rag1backend.entrypoint.main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
