[tool.poetry]
name = "rag1frontend"
version = "0.1.0"
description = ""
authors = ["DmytroKrynytsyn <dmitry.krinitsyn@gmail.com>"]
readme = "README.md"
packages = [{include = "rag1frontend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
slack-bolt = "^1.19.1"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
rag1frontend = "rag1frontend.entrypoint.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
